--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turnos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 
 <body>
+  <video id="video-background" autoplay loop muted>
+    <source src="video.mp4" type="video/mp4">
+  </video>
+
     <div class="container">
-    <h1 id="number">0</h1>
+      <h1 id="number">0</h1>
     <div class="button-container">
       <button id="decrement">-</button>
       <button id="increment">+</button>
