--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turnos</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Turnos</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
 <body>
-  <video id="video-background" autoplay loop muted>
-    <source src="video.mp4" type="video/mp4">
-  </video>
-
-    <div class="container">
-      <h1 id="number">0</h1>
-    <div class="button-container">
-      <button id="decrement">-</button>
-      <button id="increment">+</button>
+  <img class="logo" src="logo.png" alt="">
+  <div class="container">
+    <h1 id="number">0</h1>
+  </div>
+  <div class="slider-container">
+    <div class="slider">
+      <img class="banner__logo" src="logos/dbh.png" alt="">
+      <img class="banner__logo" src="logos/fag.png" alt="">
+      <img class="banner__logo" src="logos/ina.png" alt="">
+      <img class="banner__logo" src="logos/koyo.png" alt="">
+      <img class="banner__logo" src="logos/loctite.png" alt="">
+      <img class="banner__logo" src="logos/ntn.png" alt="">
+      <img class="banner__logo" src="logos/sav.png" alt="">
+      <img class="banner__logo" src="logos/skf_v2.png" alt="">
+      <img class="banner__logo" src="logos/snr.png" alt="">
+      <img class="banner__logo" src="logos/tk.png" alt="">
+      <img class="banner__logo" src="logos/tra.png" alt="">
     </div>
   </div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
