--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body id="body">
   <img class="logo" src="logo.png" alt="">
   <div class="container">
     <h1 id="number">0</h1>
