--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body id="body">
-  <img class="logo" src="logo.png" alt="">
+  <!-- <img class="logo" src="logo.png" alt=""> -->
+  <p class="retiro">Retiro de pedidos por Chacabuco</p>
   <div class="container">
     <h1 id="number">0</h1>
   </div>
