--- a/index.html
+++ b/index.html
@@ -14,25 +14,17 @@
 </head>
 
 <body id="body">
-  <!-- <img class="logo" src="logo.png" alt=""> -->
   <p class="retiro">Retiro de pedidos por Chacabuco</p>
-  <div class="container">
-    <h1 id="number">0</h1>
+
+  <div class="contenedor_video">
+    <video autoplay loop class="ads">
+      <source src="ads.mp4" type="video/mp4">
+      Tu navegador no soporta el elemento de video.
+    </video>
   </div>
-  <div class="slider-container">
-    <div class="slider">
-      <img class="banner__logo" src="logos/dbh.png" alt="">
-      <img class="banner__logo" src="logos/fag.png" alt="">
-      <img class="banner__logo" src="logos/ina.png" alt="">
-      <img class="banner__logo" src="logos/koyo.png" alt="">
-      <img class="banner__logo" src="logos/loctite.png" alt="">
-      <img class="banner__logo" src="logos/ntn.png" alt="">
-      <img class="banner__logo" src="logos/sav.png" alt="">
-      <img class="banner__logo" src="logos/skf_v2.png" alt="">
-      <img class="banner__logo" src="logos/snr.png" alt="">
-      <img class="banner__logo" src="logos/tk.png" alt="">
-      <img class="banner__logo" src="logos/tra.png" alt="">
-    </div>
+
+  <div class="container">
+    <h1 class="number">0</h1>
   </div>
 
   <script src="script.js"></script>
