--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <p class="retiro">Retiro de pedidos por Chacabuco</p>
 
   <div class="contenedor_video">
-    <video autoplay loop class="ads">
+    <video autoplay="autoplay" loop="loop" muted defaultMuted playsinline oncontextmenu="return false;" preload="auto"
+      class="ads">
       <source src="ads.mp4" type="video/mp4">
       Tu navegador no soporta el elemento de video.
     </video>
