--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     </video>
   </div>
 
-  <div class="container">
-    <h1 class="number">0</h1>
-  </div>
+  <h1 class="number">0</h1>
+
+
+  <!-- <div class="container">
+  </div> -->
 
   <script src="script.js"></script>
 </body>
